# dfa-rs

./: Cargo.toml
.circleci/: config.yml
src/: lib.rs
tests/: dfa-test.rs
